# get-ip

./: Cargo.toml  Dockerfile
charts/get-ip/: Chart.yaml  my-values.yaml  values.yaml
charts/get-ip/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml
charts/get-ip/templates/tests/: test-connection.yaml
src/: main.rs
