[package]
name = "get-ip"
version = "0.1.2"
authors = ["Enno Boland <g@s01.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13.1"
tokio = { version = "0.2", features = ["full"] }
pretty_env_logger = "0.3.1"
futures = "0.3"
log = "0.4"
